見積り機能追加

--- a/app/views/tasks/add.html.erb
+++ b/app/views/tasks/add.html.erb
@@ -19,7 +19,7 @@
 
   <div>
     <%= f.label :estimate, "見積り" %>
-    <%= f.text_field :estimate, :disabled => true %>
+    <%= f.text_field :estimate %>
   </div>
 
 
