--- a/app/views/tasks/add.html.erb
+++ b/app/views/tasks/add.html.erb
@@ -16,6 +16,11 @@
           <%= f.text_area :detail, :name => "task[detail][]" %>
         </div>
 
+        <div>
+          <%= f.label :tags, "タグ" %>
+          <%= f.text_field :estimate, :class => "time_picker", :id => "time_0", :name => "task[estimate][]" %>
+        </div>
+
         <%# datetimepickerの仕様でidを別物にしないと複数inputが効かないので明示的に指定 %>
         <div class="date">
           <%= f.label :limit, "期限" %>
